# chiubi-cloud

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
chiubi-cloud-cli/: Cargo.toml
chiubi-cloud-cli/src/: main.rs
chiubi-cloud-cli/src/tools/: common.rs  exit.rs  main.rs  mod.rs  playlist_export.rs  playlist_syncer.rs  plex_config.rs  print_config.rs
chiubi-cloud-web/: Cargo.toml
chiubi-cloud-web/src/: dto.rs
downloader/: Cargo.toml
downloader/src/: lib.rs
plex/: Cargo.toml
plex/src/: config.rs  lib.rs
rest-api/: Cargo.toml
rest-api/src/: lib.rs
src/: download.rs  main.rs  plex.rs  tools.rs  ui.rs
