[package]
name = "chiubi-cloud"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.16.2"
clap = "2.33.3"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.21", features = [ "serialize" ] }
requestty = "0.1.3"
dirs = "4.0.0"
toml = "0.5.8"
transfer-progress = "0.1.2"
sanitize-filename = "0.3.0"