[package]
name = "chiubi-cloud-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
requestty = "0.1.3"
dirs = "4.0.0"
toml = "0.5.8"
indicatif = "0.16.2"
plex = { path = "../plex" }
downloader = { path = "../downloader" }
sanitize-filename = "0.3.0"