[package]
name = "plex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.21", features = ["serialize"] }
sanitize-filename = "0.3.0"
downloader = { path = "../downloader" }